more link changing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,7 @@
        <a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
      </div>
      <ul id="navigation">
-      <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li>
-      <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li>
-      <li><a href="http://superfeedr.com/documentation" alt="RTFM">Documentation</a></li>
+      <li><a href="http://documentation.superfeedr.com" alt="RTFM">Documentation</a></li>
       <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li>
     </ul>
     <div class="clear"></div>
@@ -40,14 +38,11 @@
 
     <div id="footer">
       <ul id="footer_navigation">
-        <li><a href="http://superfeedr.com/documentation">Docs</a></li>
-        <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
-        <li><a href="http://superfeedr.com/cost">Pricing</a></li>
-        <li><a href="http://superfeedr.com/terms">Terms</a></li>
+        <li><a href="http://documentation.superfeedr.com">Docs</a></li>
         <li><a href="https://github.com/superfeedr/documentation/issues">Support</a></li>
-        <li><a href="http://github.com/superfeedr">Code</a></li>
         <li><a href="http://blog.superfeedr.com">Blog</a></li>
-        <li><a href="http://superfeedr.com/about">About</a></li>
+        <li><a href="https://superfeedr.com/cost">Pricing</a></li>
+        <li><a href="https://superfeedr.com/terms">Terms</a></li>
       </ul>
     </div>
     <div id="log" style="" ></div>
