--- a/_layouts/one_column.html
+++ b/_layouts/one_column.html
@@ -25,7 +25,7 @@
      <ul id="navigation">
       <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li>
       <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li>
-      <li><a href="http://superfeedr.com/documentation" alt="RTFM">Documentation</a></li>
+      <li><a href="http://documentation.superfeedr.com" alt="RTFM">Documentation</a></li>
       <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li>
     </ul>
     <div class="clear"></div>
@@ -42,7 +42,7 @@
 
     <div id="footer">
       <ul id="footer_navigation">
-        <li><a href="https://superfeedr.com/documentation">Docs</a></li>
+        <li><a href="https://documentation.superfeedr.com">Docs</a></li>
         <li><a href="https://github.com/superfeedr/documentation/issues">Support</a></li>
         <li><a href="https://superfeedr.com/cost">Pricing</a></li>
         <li><a href="https://superfeedr.com/terms">Terms</a></li>
