adding google verifcation

--- a/_layouts/one_column.html
+++ b/_layouts/one_column.html
@@ -4,6 +4,7 @@
 <head>
   <title>Superfeedr : {{ page.title }} </title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <meta name="google-site-verification" content="ofroHQ3qXBS1SQfblK9-U_oduGZ975Bb3i_uP13Myao" />
 
   <!-- Stylesheets -->
   <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" />
