--- a/_layouts/one_column.html
+++ b/_layouts/one_column.html
@@ -17,40 +17,36 @@
 
  </head>
 
- <body>
+ <body class="blog">
    <div id="bg">
      <div id="wrapper">
       <div id="logo">
-       <h1><a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a></h1>
+       <a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
      </div>
      <ul id="navigation">
-      <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li>
-      <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li>
       <li><a href="http://documentation.superfeedr.com" alt="RTFM">Documentation</a></li>
       <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li>
     </ul>
     <div class="clear"></div>
     <div id="main_bg">
       <div id="main_top">
-       <h2>{{ page.title }}</h2>
+       <h1>{{ page.title }}</h1>
      </div> <!--main_top-->
 
      <div id="content">
-      {{ content }}
-
-      <div class="clear"></div>
+        {{ content }}
     </div> <!--content-->
 
     <div id="footer">
       <ul id="footer_navigation">
-        <li><a href="https://documentation.superfeedr.com">Docs</a></li>
+        <li><a href="http://documentation.superfeedr.com">Docs</a></li>
         <li><a href="https://github.com/superfeedr/documentation/issues">Support</a></li>
+        <li><a href="http://blog.superfeedr.com">Blog</a></li>
         <li><a href="https://superfeedr.com/cost">Pricing</a></li>
         <li><a href="https://superfeedr.com/terms">Terms</a></li>
-        <li><a href="http://blog.superfeedr.com">Blog</a></li>
       </ul>
-
     </div>
+    <div id="log" style="" ></div>
   </div> <!--main_bg-->
 </div><!--wrapper-->
 </div><!--bg-->
@@ -70,4 +66,5 @@
 </script>
 </body>
 </html>
+
 
