preparing post on xmpp-server-2-server

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="/css/pygments.css">
   <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
 
  </head>
