--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
 
+  <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
  </head>
 
  <body class="blog">
@@ -64,5 +65,7 @@
   } catch(err) {}
   //--><!]]>
 </script>
+<script src="https://www.embedcurl.com/embedcurl.min.js" async></script>
+
 </body>
 </html>
