--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,18 +12,24 @@ layout: default
 </blockquote>
 
 
-<small class="meta">{% for t in page.categories %}
-  <a href='http://www.google.com/search?q={{ t | escape }}+site:blog.superfeedr.com'>{{ t }}</a>{% if forloop.last == false %}, {% endif %}
-  {% endfor %}
-</small>
-
 <div id="comments">
+
+    <script id="webmention-hosted">
+    (function () {
+        var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
+        url = document.querySelectorAll ? document.querySelectorAll("link[rel~=canonical]") : false;
+        url = url && url[0] ? url[0].href : false;
+        sn.type = "text/javascript"; sn.async = true;
+        sn.src = "//webmention.herokuapp.com/api/embed?url=" + encodeURIComponent(url || window.location);
+        s.parentNode.insertBefore(sn, s);
+    }());
+    </script>
+
     <h2>Comments</h2>
     <div id="disqus_thread">
     </div>
-    <script type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/embed.js"></script>
+    <script type="text/javascript" src="https://disqus.com/forums/superfeedr-thoughts/embed.js"></script>
     <noscript>
-        <a href="http://superfeedr-thoughts.disqus.com/?url=ref">View the discussion thread.</a>
+        <a href="https://superfeedr-thoughts.disqus.com/?url=ref">View the discussion thread.</a>
     </noscript>
-    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
