--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="h-entry" id="post">
     <h2 class="p-name">{{page.title}}</h2>
     <span class="invisible u-uid">blog.superfeedr.com:{{ page.id }}</span>
-    <div class="meta"><img src="http://www.gravatar.com/avatar/{{page.author_email_md5}}?s=20" >By <a class="p-author h-card" href="{{ page.author_uri}}">{{ page.author_name }}</a>, on <span class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</span></div>
+    <div class="postmeta"><img src="http://www.gravatar.com/avatar/{{page.author_email_md5}}?s=20" >By <a class="p-author h-card" href="{{ page.author_uri}}">{{ page.author_name }}</a>, on <span class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</span></div>
     <div class="e-content">
         {{ content }}
     </div>
