--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 <article class="h-entry" id="post">
-    <h2 class="p-name">{{page.title}}</h2>
+    <h2 class="p-name"><a class="u-url" href="{{page.url}}">{{page.title}}</a></h2>
+
     <span class="invisible u-uid">blog.superfeedr.com:{{ page.id }}</span>
-    <div class="postmeta"><img src="http://www.gravatar.com/avatar/{{page.author_email_md5}}?s=20" >By <a class="p-author h-card" href="{{ page.author_uri}}">{{ page.author_name }}</a>, on <span class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</span></div>
+
+
+    <div class="postmeta">By <span class="p-author h-card"><img class="u-photo" src="http://www.gravatar.com/avatar/{{page.author_email_md5}}?s=20" > <a href="{{ page.author_uri}}" rel="author">{{ page.author_name }}</a></span>, on <span class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</span></div>
     <div class="e-content">
         {{ content }}
     </div>
@@ -17,6 +20,8 @@ layout: default
 
 <div id="comments">
 
+    <h2>Comments</h2>
+
     <script id="webmention-hosted">
     (function () {
         var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
@@ -28,7 +33,6 @@ layout: default
     }());
     </script>
 
-    <h2>Comments</h2>
     <div id="disqus_thread">
     </div>
     <script type="text/javascript" src="https://disqus.com/forums/superfeedr-thoughts/embed.js"></script>
