--- a/css/blog.css
+++ b/css/blog.css
@@ -59,3 +59,34 @@ blockquote {
   float:left;
   margin: -2px 3px 3px 0px;
 }
+
+.webmention-mention {
+  font-size: 15px;
+  padding-left: 60px;
+  position: relative;
+  margin-bottom: 20px;
+}
+.webmention-name, .webmention-summary {
+  margin: 10px 0;
+}
+
+.webmention-author {
+}
+
+.webmention-published {
+  display: block;
+  font-size: 12px;
+  color: rgba(0, 39, 59, 0.35);
+}
+
+.webmention-author img {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 50px;
+  border-radius: 2px;
+}
+
+.webmention-name {
+  display: none;
+}
