--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,14 @@
   <meta name="google-site-verification" content="ofroHQ3qXBS1SQfblK9-U_oduGZ975Bb3i_uP13Myao" />
 
   <!-- Stylesheets -->
-  <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="http://superfeedr.com/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="http://superfeedr.com/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-  <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/css/superfeedr.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="/css/pygments.css">
+  <link href="/css/pygments.css" rel="stylesheet" type="text/css" />
+
+  <!-- Feed -->
   <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
 
+  <!-- Webmentions -->
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
  </head>
 
@@ -23,7 +22,7 @@
    <div id="bg">
      <div id="wrapper">
       <div id="logo">
-       <a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
+       <a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="/images/superfeedr_complete.png" /></a>
      </div>
      <ul id="navigation">
       <li><a href="http://documentation.superfeedr.com" alt="RTFM">Documentation</a></li>
