using the right links for the dashboard header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,11 @@
       <h1 class="header-logo"><a href="/"><img src="/images/logo.png" alt=""> <span>Superfeedr Blog</span></a></h1>
       <nav class="nav-header">
         <ul class="nav-items">
-          <li class="nav-item"><a href="http://staging.superfeedr.com/about" class="nav-link nav-link-current">About</a></li>
-          <li class="nav-item"><a href="http://staging.superfeedr.com/publisher" class="nav-link">Publishers</a></li>
-          <li class="nav-item"><a href="http://staging.superfeedr.com/subscriber" class="nav-link">Subscribers</a></li>
-          <li class="nav-item"><a href="http://staging.superfeedr.com/subscriber/pricing" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="http://staging.superfeedr.com/login" class="nav-link nav-link-bubble">Login</a></li>
+          <li class="nav-item"><a href="http://superfeedr.com/about" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="http://superfeedr.com/publisher" class="nav-link">Publishers</a></li>
+          <li class="nav-item"><a href="http://superfeedr.com/subscriber" class="nav-link">Subscribers</a></li>
+          <li class="nav-item"><a href="http://superfeedr.com/subscriber/pricing" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="http://superfeedr.com/login" class="nav-link nav-link-bubble">Login</a></li>
         </ul>
       </nav>
     </div>
