--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic|Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
 
   <link href="/css/front.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/css/code.css" rel="stylesheet" />
+  <link href="/css/prism.css" rel="stylesheet" type="text/css">
 
   <title>Superfeedr : {{ page.title }} </title>
 
@@ -87,6 +87,8 @@
   } catch(err) {}
   //--><!]]>
   </script>
+
+  <script src="/scripts/prism.js"></script>
 
 </body>
 </html>
