--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 
   <meta http-equiv="Content-Security-Policy" content="connect-src stream.superfeedr.com">
 
+  <link rel="shortcut icon" href="/favicon.png">
+
 </head>
 <body>
   <header class="header">
