correcting a few pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <input type="button" class="button  button--raised  button--positive" value="Subscribe" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()">
         <a href="/archive.html" class="button  button--raised  button--neutral">Read Archives</a>
       </div>
-      <h2><strong>Blog</strong></h2>
+      <h2><strong>{{ page.title }} </strong></h2>
     </header>
 
     <div class="body-content">
