--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1 class="header-logo"><a href="/"><img src="/images/batlogo.png" alt=""> <span>Superfeedr Blog</span></a></h1>
+      <h1 class="header-logo"><a href="/"><img src="/images/logo.png" alt=""> <span>Superfeedr Blog</span></a></h1>
       <nav class="nav-header">
         <ul class="nav-items">
           <li class="nav-item"><a href="http://superfeedr.com/about" class="nav-link">About</a></li>
