replaced h1 for blog title with div for better SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,12 +30,12 @@
   <header class="header">
     <div class="container">
 
-      <h1 class="header-logo">
+      <div class="header-logo">
         <a title="Superfeedr Home" href="/">
           <img alt="Logo" src="/images/logo.svg"> 
           <span>Superfeedr Blog</span>
         </a>
-      </h1>
+      </div>
 
       <nav class="nav-header">
         <ul class="nav-items">
