--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="blog-article blog-article--single h-entry">
+<article class="blog-article blog-article--single h-entry hentry">
   <h2 class="entry-title p-name"><a class="u-url" href="{{page.url}}">{{page.title}}</a></h2>
 
   <span class="invisible u-uid" style="display:none">blog.superfeedr.com:{{ page.id }}</span>
