--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,33 @@
 
 </head>
 <body>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-9285763-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- Google Code for Remarketing Tag -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 984056007;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+  <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/984056007/?value=0&amp;guid=ON&amp;script=0"/>
+  </div>
+</noscript>
+
+
   <header class="header">
     <div class="container">
 
@@ -113,21 +140,6 @@
   <script src="{{ js_file }}" defer></script>
   {% endfor %}
 
-
-  <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-  <!--//--><![CDATA[//><!--
-  try {
-    var pageTracker = _gat._getTracker('UA-9285763-1');
-    pageTracker._setDomainName("superfeedr.com");
-    pageTracker._initData();
-    pageTracker._trackPageview();
-  } catch(err) {}
-  //--><!]]>
-  </script>
 
 </body>
 </html>
