--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   <div class="entry-meta">
     <ul class="entry-meta--primary postmeta">
       <li class="entry-meta--item author">By <span class="p-author h-card vcard"><img alt="avatar {{ page.author_name }}" class="u-photo" src="http://www.gravatar.com/avatar/{{page.author_email_md5}}?s=20"> <a href="{{ page.author_uri}}" class="url fn" rel="author">{{ page.author_name }}</a></span></li>
-      <li class="entry-meta--item dt-published published dt-updated updated" datetime="{{ page.date | date_to_xmlschema }}"><time>{{ page.date | date_to_string }}</time></li>
+      <li class="entry-meta--item dt-published published dt-updated updated"><time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></li>
     </ul>
   </div>
   <div class="entry-content e-content">
@@ -31,7 +31,6 @@ layout: default
   <p>
     Previously, on the Superfeedr blog: <a href="{{ page.previous.url }}">{{ page.previous.title }}</a>.
   </p>
-</ul>
 
 </div>
 <div class="blog-comments">
