--- a/css/front.css
+++ b/css/front.css
@@ -34,3 +34,12 @@ blockquote {
 	margin-top: 100px;
 	font-size: 0.8em;
 }
+
+.hidden {
+	display: none;
+}
+
+.list-group-item {
+	padding: 5px 0px 5px 0px;
+	margin: 5px 0px 5px;
+}
