better layout for pagination

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@ var google_remarketing_only = true;
     <header class="body-header">
       <div class="blog-links">
         <input type="button" class="button  button--raised  button--positive" value="Subscribe" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()">
-        <a href="/archive.html" class="button  button--raised  button--neutral">Read Archives</a>
+        <a href="/archive.html" class="button  button--raised  button--positive">Read Archives</a>
       </div>
       <h1 class="slim">{{ page.title }}</h1>
     </header>
