adding autodiscovery post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,9 @@
   <title>Superfeedr Blog - {{ page.title }}</title>
   {% endif %}
 
-  <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
+  <link rel="alternate feed" type="application/atom+xml" title="Superfeedr Blog" href="/atom.xml">
+
+
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
 
   <link rel="shortcut icon" href="/favicon.png">
