--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,15 +30,14 @@
     {% endif %}
   {% endif %}
 
-
-
   <!-- facebook open graph tags -->
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:url" content="http://blog.superfeedr.com{{ page.url }}" />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="{{page.description}}" />
   <meta property="og:site_name" content="Superfeedr Blog" />
-  <meta property="og:image" content="{{page.image}}" />
+  <meta property="og:image" content="http://blog.superfeedr.com{{page.image}}" />
+  <meta property="fb:app_id" content="191433524399">
 
   <!-- twitter card tags additive with the og: tags -->
   <meta name="twitter:domain" value="blog.superfeedr.com" />
